--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,21 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_launcher_icons: ^0.12.0
   flutter_spinkit: ^5.1.0
   http: ^0.13.5
   intl: ^0.18.0
-  # top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/time-zones.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
